--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,20 +8,21 @@ body {
   color: black;
 }
 
-.smoke {
-  
-  transition: opacity 0.5s ease; 
+.smoke{
+  opacity: 0;
+  transition: 0.5s;
 }
 
 .switch_text {
-  color:#f5f5e1;
+  color:black;
   font-weight: bold;
   cursor: pointer;
-  font-weight: bold;
   display: inline-block;
 }
   
-.switch_text:hover {
-  background-color: orange;
-  color: white;
+#salutation {
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+  display: inline-block;
 }
