--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,10 +1,17 @@
 @font-face {
   font-family: 'UbuntuMono';
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
   font-stretch: 100%;
   src: url("../fonts/ubuntu_mono/UbuntuMono-Regular.ttf") format('truetype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'UbuntuMono';
+  font-style: normal;
+  font-weight: 700; 
+  src: url("../fonts/ubuntu_mono/UbuntuMono-Bold.ttf") format('truetype');
 }
 
 body {
@@ -17,6 +24,8 @@ body {
   background-size: cover;
   color: black;
 }
+
+
 
 .smoke {
   
@@ -36,4 +45,9 @@ body {
   font-weight: bold;
   cursor: pointer;
   display: inline-block;
+}
+
+#application_form{
+  color:rgb(109, 123, 120);
+  text-decoration: underline;
 }
