--- a/static/css/toggle.css
+++ b/static/css/toggle.css
@@ -1,6 +1,6 @@
 .flex-cradle {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end; 
     align-items: center;
     flex-direction: column;
     width: 100%;
