--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,7 +14,14 @@
   src: url("../fonts/ubuntu_mono/UbuntuMono-Bold.ttf") format('truetype');
 }
 
-
+@font-face {
+  font-family: 'Bakudai';
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: 100%;
+  src: url("../fonts/bakudai/Bakudai-Regular.ttf") format('truetype');
+  /* unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; */
+}
 
 body {
   /* background: linear-gradient(to top, #000000, #dacfb0); */
@@ -26,6 +33,10 @@ body {
   background-size: cover;
   color: black;
 }
+
+/* #twn_toggle {
+  font-family: "Bakudai", sans-serif;
+} */
 
 .weight_bold{
   font-weight: bold;
