--- a/static/css/toggle.css
+++ b/static/css/toggle.css
@@ -23,10 +23,12 @@
     width: 50%;
     font-size: small;
     margin-bottom: 3px;
+    /* color: #cacaca; */
   }
   .slider-cradle .option-2 {
     width: 50%;
     font-size: small;
+    /* color: #cacaca; */
   }
   .slider-cradle .handle {
     cursor: pointer;
