--- a/static/css/index.css
+++ b/static/css/index.css
@@ -85,3 +85,23 @@ body {
   transition: opacity 0.5s ease;
 }
 
+  #calendar iframe {
+    filter: grayscale(100%);
+  }
+  .calendar-responsive {
+  position: relative;
+  width: 100%;
+  padding-bottom: 75%; 
+  height: 0;
+  overflow: hidden;
+}
+
+.calendar-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
